# OpenEnv-Hackathon

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  benchmark.py  benchmark_results.json  benchmark_results.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: engine.py  environment.py  graders.py  main.py  models.py  openenv_types.py
app/tasks/: easy.py  hard.py  medium.py
data/: gst_rules.py  hsn_codes.py
notebooks/: quickstart.ipynb  training.ipynb
scripts/: build_training_notebook.py  generate_thumbnail.py
server/: app.py
tests/: test_env.py
